<!-- res/layout/fragment_game.xml -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bgapp" />

    <TextView
        android:id="@+id/title_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/games"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logogame"
            android:scaleType="fitCenter" />

        <Button
            android:id="@+id/btn_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mulai_main"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blueishs"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/mainkan_ratusan_level_tetris_untuk_mainkan_mode_putaran_operasional_menangkan_dan_anda_sendiri_atau_mainkan_mode_perteman_dari_tetris_untuk_menguji_keterampilan_anda_dalam_mode_pemain_tunggal_tetris"
            android:textColor="#000000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:scaleType="centerInside"
                android:layout_margin="4dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:scaleType="centerInside"
                android:layout_margin="4dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:scaleType="centerInside"
                android:layout_margin="4dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/beta_realease"
            android:textColor="#888888"
            android:textSize="12sp" />

    </LinearLayout>

</FrameLayout>
