<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RewardFragment">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:src="@drawable/bgapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_reward"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/points"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/medal"
        android:layout_width="325dp"
        android:layout_height="153dp"
        android:layout_marginTop="212dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:src="@drawable/ribbon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pointlbl"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/point"
        android:textColor="@color/blueish500"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medal"
        app:layout_editor_absoluteX="166dp" />

    <TextView
        android:id="@+id/tps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Points"
        android:textColor="#3A3131"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pointlbl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:layout_editor_absoluteX="244dp"
        app:layout_editor_absoluteY="365dp" />

    <TextView
        android:id="@+id/tpsss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Klaim Berbagai Voucher!"
        android:textColor="#3A3131"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointlbl"
        app:layout_editor_absoluteX="113dp" />

    <TextView
        android:id="@+id/tpssss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Undang Teman Anda"
        android:textColor="@color/blueish500"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/badges"
        app:layout_editor_absoluteX="113dp" />

    <TextView
        android:id="@+id/tpsssss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Dapatkan 100 points dari tiap undangan"
        android:textColor="#3A3131"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tpssss"
        app:layout_editor_absoluteX="113dp" />

    <ImageView
        android:id="@+id/checkimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:src="@drawable/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tpsss"
        app:layout_editor_absoluteX="186dp" />

    <ImageView
        android:id="@+id/badges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/badges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkimage"
        app:layout_editor_absoluteX="76dp" />

    <Button
        android:id="@+id/btn_invite"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:backgroundTint="@color/blueishs"
        android:text="@string/undang_temans"
        android:textColor="#FFFFFF"
        android:onClick="onInviteButtonClick"
        app:layout_constraintTop_toBottomOf="@+id/tpsssss"
        app:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
